dev info edited

--- a/app/views/application/about.html.erb
+++ b/app/views/application/about.html.erb
@@ -77,7 +77,7 @@
           <img src="/assets/images/andre.jpg" class="img-circle">
           <div class="caption">
             <h3>André Vieira</h3>
-            <p>Estudante de Ciência da Computação, curioso na area de robotica com enfase em protêses medicas.<br />Apaixonado por jogos e nas horas vagas praticante de Slackline</p>
+            <p>Estudante de Ciência da Computação, curioso na area de robotica com enfase em protêses médicas.<br />Apaixonado por jogos e nas horas vagas praticante de Slackline</p>
             <p><a href="#" onclick="customButtomClick('https://github.com/byandreee')" class="btn btn-social-icon btn-github">
               <i class="fa fa-github"></i>
             </a>
@@ -124,11 +124,11 @@
           <img src="/assets/images/lordello.jpg" class="img-circle">
           <div class="caption">
             <h3>Renan Lordello</h3>
-            <p>Estudante de exatas com um pé em humanas,devido ao seu amor pela natureza, fora escoteiro durante um período de sua vida, se apaixonando pelas diversas áreas de conhecimento.</p>
+            <p>Estudante de cienca da computacao, louco por matematica e desenvolvimento de software, e praticante de e-sports.</p>
             <p><a hre="#" onclick="customButtomClick('https://github.com/automagicly')" class="btn btn-social-icon btn-github">
               <i class="fa fa-github"></i>
             </a>
-            <a href="#" onclick="customButtomClick('https://br.linkedin.com/in/darkkgreen')" class="btn btn-linkedin">
+            <a href="#" onclick="customButtomClick('https://br.linkedin.com/in/renan-lordello-de-aguiar-a1628b4b')" class="btn btn-linkedin">
               <i class="fa fa-linkedin"></i>
             </a>
           </div>
