Added view for showing reports from users

--- a/app/views/report/_reportpc.html.erb
+++ b/app/views/report/_reportpc.html.erb
@@ -24,7 +24,9 @@
           </div>
         <% end %>
       <% else %>
-        <%= "seu safado" %>
+          <div class="alert alert-danger">
+            <strong>Que loucura!</strong> Você esta acessando um espaço que é necessário estar autenticado.
+          </div>
       <% end %>
     </div>
   </div>
