Dev container fix

--- a/app/views/application/about.html.erb
+++ b/app/views/application/about.html.erb
@@ -1,3 +1,5 @@
+
+<div class="container">
 <div class="col-sm-3 col-md-2 perfil">
 	<div class="thumbnail">
 		<img src="/assets/images/andre.jpg" class="img-circle">
@@ -60,7 +62,7 @@
       </div>
     </div>
   </div>
-
+</div>
 
 <style>
 body {
