--- a/app/views/application/about.html.erb
+++ b/app/views/application/about.html.erb
@@ -1,62 +1,62 @@
 
 <div class="container">
-  <div class="col-xs-12 col-sm-6 col-md-3 perfil">
-    <div class="thumbnail">
-      <img src="/assets/images/andre.jpg" class="img-circle">
-      <div class="caption">
-        <h3>André Vieira</h3>
-        <p>Estudante de Ciência da Computação, curioso na area de robotica com enfase em protêses médicas.<br />Apaixonado por jogos e nas horas vagas praticante de Slackline</p>
-        <p><a href="#" onclick="customButtomClick('https://github.com/byandreee')" class="btn btn-social-icon btn-github">
-          <i class="fa fa-github"></i>
-        </a>
-        <a href="#" onclick="customButtomClick('https://br.linkedin.com/in/andredvieira')" class="btn btn-linkedin">
-          <i class="fa fa-linkedin"></i>
-        </a>
-      </div>
-    </div>
-  </div>
+<div class="col-sm-3 col-md-3 perfil">
+	<div class="thumbnail">
+		<img src="/assets/images/andre.jpg" class="img-circle">
+		<div class="caption">
+		<h3>André Vieira</h3>
+		<p>Estudante de Ciência da Computação, curioso na area de robotica com enfase em protêses médicas.<br />Apaixonado por jogos e nas horas vagas praticante de Slackline</p>
+		<p><a href="https://github.com/byandreee" class="btn btn-social-icon btn-github">
+		<i class="fa fa-github"></i>
+		</a>
+		<a href="https://br.linkedin.com/in/andredvieira" class="btn btn-linkedin">
+		<i class="fa fa-linkedin"></i>
+		</a>
+		</div>
+	</div>
+</div>
 
-  <div class="col-xs-12 col-sm-6 col-md-3 perfil">
-    <div class="thumbnail">
-      <img src="/assets/images/gustavo.jpg" class="img-circle">
-      <div class="caption">
-        <h3>Gustavo Rodrigues</h3>
-        <p>Estudante de exatas com um pé em humanas, apaixonado por diversas áreas do conhecimento.<br />Praticante de Handebol, Natação, Desenho e Maxed nas suas horas vagas.</p>
-        <p><a hre="#" onclick="customButtomClick('https://github.com/darkkgreen')" class="btn btn-social-icon btn-github">
-          <i class="fa fa-github"></i>
-        </a>
-        <a href="#" onclick="customButtomClick('https://br.linkedin.com/in/darkkgreen')" class="btn btn-linkedin">
-          <i class="fa fa-linkedin"></i>
-        </a>
-      </div>
+<div class="col-sm-3 col-md-3 perfil">
+  <div class="thumbnail">
+    <img src="/assets/images/gustavo.jpg" class="img-circle">
+    <div class="caption">
+      <h3>Gustavo Rodrigues</h3>
+      <p>Estudante de exatas com um pé em humanas, apaixonado por diversas áreas do conhecimento.<br />Praticante de Handebol, Natação, Desenho e Maxed nas suas horas vagas.</p>
+      <p><a hre="https://github.com/darkkgreen" class="btn btn-social-icon btn-github">
+        <i class="fa fa-github"></i>
+      </a>
+      <a href="https://br.linkedin.com/in/darkkgreen" class="btn btn-linkedin">
+        <i class="fa fa-linkedin"></i>
+      </a>
     </div>
   </div>
+</div>
 
-  <div class="col-xs-12 col-sm-6 col-md-3 perfil">
-    <div class="thumbnail">
-      <img src="/assets/images/eihara.jpg" class="img-circle">
-      <div class="caption">
-        <h3>Henrique Eihara</h3>
-        <p>Estudante de exatas com um pé em humanas,devido ao seu amor pela natureza, fora escoteiro durante um período de sua vida, se apaixonando pelas diversas áreas de conhecimento.</p>
-        <p><a hre="#" onclick="customButtomClick('https://github.com/eiguike')" class="btn btn-social-icon btn-github">
-          <i class="fa fa-github"></i>
-        </a>
-        <a href="#" onclick="customButtomClick('https://www.linkedin.com/in/rickeihara')" class="btn btn-linkedin">
-          <i class="fa fa-linkedin"></i>
-        </a>
-      </div>
+<div class="col-sm-3 col-md-3 perfil">
+  <div class="thumbnail">
+    <img src="/assets/images/eihara.jpg" class="img-circle">
+    <div class="caption">
+      <h3>Henrique Eihara</h3>
+      <p>Estudante de exatas com um pé em humanas,devido ao seu amor pela natureza, fora escoteiro durante um período de sua vida, se apaixonando pelas diversas áreas de conhecimento.</p>
+      <p><a hre="https://github.com/eiguike" class="btn btn-social-icon btn-github">
+        <i class="fa fa-github"></i>
+      </a>
+      <a href="https://www.linkedin.com/in/rickeihara" class="btn btn-linkedin">
+        <i class="fa fa-linkedin"></i>
+      </a>
     </div>
   </div>
-  <div class="col-xs-12  col-sm-6 col-md-3 perfil">
+ </div>
+  <div class="col-sm-3 col-md-3 perfil">
     <div class="thumbnail">
       <img src="/assets/images/lordello.jpg" class="img-circle">
       <div class="caption">
         <h3>Renan Lordello</h3>
         <p>Estudante de cienca da computacao, louco por matematica e desenvolvimento de software, e praticante de e-sports.</p>
-        <p><a hre="#" onclick="customButtomClick('https://github.com/automagicly')" class="btn btn-social-icon btn-github">
+        <p><a hre="https://github.com/automagicly" class="btn btn-social-icon btn-github">
           <i class="fa fa-github"></i>
         </a>
-        <a href="#" onclick="customButtomClick('https://br.linkedin.com/in/renan-lordello-de-aguiar-a1628b4b')" class="btn btn-linkedin">
+        <a href="https://br.linkedin.com/in/renan-lordello-de-aguiar-a1628b4b" class="btn btn-linkedin">
           <i class="fa fa-linkedin"></i>
         </a>
       </div>
@@ -78,6 +78,10 @@ body {
   width: 600px;
 }
 
+.perfil {
+  width: 50%;
+}
+
 .thumbnail {
   border-style: none;
   background-color: transparent;
@@ -97,9 +101,9 @@ body {
 }
 
 .alert {
-  margin-left: auto;
-  margin-right: auto;
-  width: 50%;
+    margin-left: auto;
+    margin-right: auto;
+    width: 50%;
 }
 
 .table {
@@ -120,9 +124,9 @@ body {
 }
 
 #custom-search-input{
-  border: solid 1px #E4E4E4;
-  border-radius: 6px;
-  background-color: #fff;
+    border: solid 1px #E4E4E4;
+    border-radius: 6px;
+    background-color: #fff;
 }
 
 #custom-search-input input {
@@ -148,6 +152,10 @@ body {
 
 #custom-search-input .glyphicon-search{
   font-size: 23px;
+
+}
+p{
+ text-align: center;
 
 }
 </style>
