--- a/app/views/application/about.html.erb
+++ b/app/views/application/about.html.erb
@@ -22,7 +22,7 @@
     <div class="caption">
       <h3>Gustavo Rodrigues</h3>
       <p>Estudante de exatas com um pé em humanas, apaixonado por diversas áreas do conhecimento.<br />Praticante de Handebol, Natação, Desenho e Maxed nas suas horas vagas.</p>
-      <p><a hre="https://github.com/darkkgreen" class="btn btn-social-icon btn-github">
+      <p><a href="https://github.com/darkkgreen" class="btn btn-social-icon btn-github">
         <i class="fa fa-github"></i>
       </a>
       <a href="https://br.linkedin.com/in/darkkgreen" class="btn btn-linkedin">
@@ -38,7 +38,7 @@
     <div class="caption">
       <h3>Henrique Eihara</h3>
       <p>Estudante de exatas com um pé em humanas,devido ao seu amor pela natureza, fora escoteiro durante um período de sua vida, se apaixonando pelas diversas áreas de conhecimento.</p>
-      <p><a hre="https://github.com/eiguike" class="btn btn-social-icon btn-github">
+      <p><a href="https://github.com/eiguike" class="btn btn-social-icon btn-github">
         <i class="fa fa-github"></i>
       </a>
       <a href="https://www.linkedin.com/in/rickeihara" class="btn btn-linkedin">
@@ -53,7 +53,7 @@
       <div class="caption">
         <h3>Renan Lordello</h3>
         <p>Estudante de cienca da computacao, louco por matematica e desenvolvimento de software, e praticante de e-sports.</p>
-        <p><a hre="https://github.com/automagicly" class="btn btn-social-icon btn-github">
+        <p><a href="https://github.com/automagicly" class="btn btn-social-icon btn-github">
           <i class="fa fa-github"></i>
         </a>
         <a href="https://br.linkedin.com/in/renan-lordello-de-aguiar-a1628b4b" class="btn btn-linkedin">
