--- a/app/views/dashboard/show.html.erb
+++ b/app/views/dashboard/show.html.erb
@@ -4,32 +4,44 @@
   <div class="row tile_count">
     <div class="col-md-2 col-sm-4 col-xs-6 tile_stats_count">
       <span class="count_top"><i class="fa fa-user"></i> Tempo Aberto Hoje</span>
+      <!-- aqui precisa pegar do dia atual (moment()) quantas horas está aberto até o momento-->
+      <!-- pra pegar o moment a partir da meia noite, é necessário que vc escreva moment().startOf("day")-->
       <div class="count">50</div>
+      <!-- aqui precisa pegar o valor diário do mesmo dia na semana passada. moment().subtract(7, 'days").startOf("day")-->
       <span class="count_bottom"><i class="green">4% </i> From last Week</span>
     </div>
     <div class="col-md-2 col-sm-4 col-xs-6 tile_stats_count">
       <span class="count_top"><i class="fa fa-clock-o"></i> Tempo Médio Aberto</span>
+      <!-- aqui pega quanto tempo ficou aberto em média até o dia atual (de domingo até hoje dividido pelo numero de dias rolados -->
       <div class="count">123.50</div>
+      <!-- aqui precisa pegar a soma do tempo da semana passada inteira -->
       <span class="count_bottom"><i class="green"><i class="fa fa-sort-asc"></i>3% </i> From last Week</span>
     </div>
     <div class="col-md-2 col-sm-4 col-xs-6 tile_stats_count">
-      <span class="count_top"><i class="fa fa-user"></i> Número de Usuários Hoje</span>
+      <span class="count_top"><i class="fa fa-user"></i> Pico de Usuários Hoje</span>
+      <!-- aqui a gente infere o pico de usuários no dia atual -->
       <div class="count green">2,500</div>
+      <!-- aqui a gente infere o pico de usuários na semana inteira passada -->
       <span class="count_bottom"><i class="green"><i class="fa fa-sort-asc"></i>34% </i> From last Week</span>
     </div>
     <div class="col-md-2 col-sm-4 col-xs-6 tile_stats_count">
       <span class="count_top"><i class="fa fa-user"></i> Reports Não Resolvidos</span>
+      <!-- Só pegar o número de reports que ainda estão marcados como não resolvidos -->
       <div class="count">4,567</div>
+      <!-- Pega o número total de reports no sistema (vai ser usado na geração do código abaixo) -->
       <span class="count_bottom"><i class="red"><i class="fa fa-sort-desc"></i>12% </i> From last Week</span>
     </div>
     <div class="col-md-2 col-sm-4 col-xs-6 tile_stats_count">
       <span class="count_top"><i class="fa fa-user"></i> Reports Totais </span>
+      <!-- Pegar o número total de reports (que no caso foi feito acima) -->
       <div class="count">2,315</div>
       <span class="count_bottom"><i class="green"><i class="fa fa-sort-asc"></i>34% </i> From last Week</span>
     </div>
     <div class="col-md-2 col-sm-4 col-xs-6 tile_stats_count">
       <span class="count_top"><i class="fa fa-user"></i> Equip. ligado por hora fechado</span>
+      <!-- Pegar nessa semana os horários em que tinham pcs ligados e que o lab estava fechado -->
       <div class="count">7,325</div>
+      <!-- Pegar o mesmo dado só que da semana passada -->
       <span class="count_bottom"><i class="green"><i class="fa fa-sort-asc"></i>34% </i> From last Week</span>
     </div>
   </div>
