add more infos in about

--- a/app/views/application/about.html.erb
+++ b/app/views/application/about.html.erb
@@ -1,15 +1,26 @@
-
+<title>Sobre</title>
 <div class="container">
+
+<div class="page-header">
+        <h1>O projeto</h1>
+        <p class="lead">Projeto realizado na Universidade Federal de São Carlos - Sorocaba, nas matérias de Projeto de Desenvolvimento de Software (PDS) e Interface Humano Computador (IHC).< /br>
+						O sistema consiste no gerenciamento dos laboratórios de informática, verificando a disponibilidade do mesmo e das máquinas a partir de um mapa do laboratório, o status do laboratório 
+						(a disponibilidade, se atualmente está ocorrendo aula ou monitoria), report de máquinas danificadas e requisição de instalação de software para utilização.</p>
+</div>
+
+
+
+<h3>Desenvolvedores</h3>
 <div class="col-sm-3 col-md-3 perfil">
 	<div class="thumbnail">
 		<img src="/assets/images/andre.jpg" class="img-circle">
 		<div class="caption">
 		<h3>André Vieira</h3>
-		<p>Estudante de Ciência da Computação, curioso na area de robotica com enfase em protêses médicas.<br />Apaixonado por jogos e nas horas vagas praticante de Slackline</p>
+		<p>Estudante de Ciência da Computação, curioso na área de robótica com ênfase em próteses médicas.<br />Apaixonado por jogos e nas horas vagas praticante de Slackline</p>
 		<p><a href="https://github.com/byandreee" class="btn btn-social-icon btn-github">
 		<i class="fa fa-github"></i>
 		</a>
-		<a href="https://br.linkedin.com/in/andredvieira" class="btn btn-linkedin">
+		<a href="https://www.linkedin.com/in/andredvieira" class="btn btn-linkedin">
 		<i class="fa fa-linkedin"></i>
 		</a>
 		</div>
@@ -21,11 +32,11 @@
     <img src="/assets/images/gustavo.jpg" class="img-circle">
     <div class="caption">
       <h3>Gustavo Rodrigues</h3>
-      <p>Estudante de exatas com um pé em humanas, apaixonado por diversas áreas do conhecimento.<br />Praticante de Handebol, Natação, Desenho e Maxed nas suas horas vagas.</p>
+      <p>Estudante de exatas com um pé em humanas, apaixonado por diversas áreas do conhecimento.<br />Praticante de Handebol, Natação, Desenho e Maxed nas suas horas vagas. </p>
       <p><a href="https://github.com/darkkgreen" class="btn btn-social-icon btn-github">
         <i class="fa fa-github"></i>
       </a>
-      <a href="https://br.linkedin.com/in/darkkgreen" class="btn btn-linkedin">
+      <a href="https://www.linkedin.com/in/darkkgreen" class="btn btn-linkedin">
         <i class="fa fa-linkedin"></i>
       </a>
     </div>
@@ -37,7 +48,7 @@
     <img src="/assets/images/eihara.jpg" class="img-circle">
     <div class="caption">
       <h3>Henrique Eihara</h3>
-      <p>Estudante de exatas com um pé em humanas,devido ao seu amor pela natureza, fora escoteiro durante um período de sua vida, se apaixonando pelas diversas áreas de conhecimento.</p>
+      <p></p>
       <p><a href="https://github.com/eiguike" class="btn btn-social-icon btn-github">
         <i class="fa fa-github"></i>
       </a>
@@ -47,16 +58,16 @@
     </div>
   </div>
  </div>
-  <div class="col-sm-3 col-md-3 perfil">
+<div class="col-sm-3 col-md-3 perfil">
     <div class="thumbnail">
       <img src="/assets/images/lordello.jpg" class="img-circle">
       <div class="caption">
         <h3>Renan Lordello</h3>
-        <p>Estudante de cienca da computacao, louco por matematica e desenvolvimento de software, e praticante de e-sports.</p>
+        <p>Estudante de Ciência da Computação, louco por matemática e desenvolvimento de software, e praticante de e-sports.</p>
         <p><a href="https://github.com/automagicly" class="btn btn-social-icon btn-github">
           <i class="fa fa-github"></i>
         </a>
-        <a href="https://br.linkedin.com/in/renan-lordello-de-aguiar-a1628b4b" class="btn btn-linkedin">
+        <a href="https://www.linkedin.com/in/renan-lordello-de-aguiar-a1628b4b" class="btn btn-linkedin">
           <i class="fa fa-linkedin"></i>
         </a>
       </div>
