--- a/app/views/application/about.html.erb
+++ b/app/views/application/about.html.erb
@@ -1,9 +1,8 @@
-<title>Sobre</title>
 <div class="container">
 
 <div class="page-header">
-        <h1>O projeto</h1>
-        <p class="lead">Projeto realizado na Universidade Federal de São Carlos - Sorocaba, nas matérias de Projeto de Desenvolvimento de Software (PDS) e Interface Humano Computador (IHC).< /br>
+        <h1>O Projeto</h1>
+        <p class="lead">Realizado na Universidade Federal de São Carlos - Sorocaba, nas matérias de Projeto de Desenvolvimento de Software (PDS) e Interface Humano Computador (IHC).<br />
 						O sistema consiste no gerenciamento dos laboratórios de informática, verificando a disponibilidade do mesmo e das máquinas a partir de um mapa do laboratório, o status do laboratório 
 						(a disponibilidade, se atualmente está ocorrendo aula ou monitoria), report de máquinas danificadas e requisição de instalação de software para utilização.</p>
 </div>
