--- a/app/views/application/about.html.erb
+++ b/app/views/application/about.html.erb
@@ -9,7 +9,8 @@
 
 
 
-<h3>Desenvolvedores</h3>
+<h1>Desenvolvedores</h1>
+<br><br />
 <div class="col-sm-3 col-md-3 perfil">
 	<div class="thumbnail">
 		<img src="/assets/images/andre.jpg" class="img-circle">
@@ -162,7 +163,7 @@ body {
 
 }
 p{
- text-align: center;
+ text-align: justify;
 
 }
 </style>
