--- a/app/views/application/about.html.erb
+++ b/app/views/application/about.html.erb
@@ -2,27 +2,27 @@
 
 <div class="page-header">
         <h1>O Projeto</h1>
-        <p class="lead">Realizado na Universidade Federal de São Carlos - Sorocaba, nas matérias de Projeto de Desenvolvimento de Software (PDS) e Interface Humano Computador (IHC).<br />
+        <p class="lead",><justify>Realizado na Universidade Federal de São Carlos - Sorocaba, nas matérias de Projeto de Desenvolvimento de Software (PDS) e Interface Humano Computador (IHC).<br />
 						O sistema consiste no gerenciamento dos laboratórios de informática, verificando a disponibilidade do mesmo e das máquinas a partir de um mapa do laboratório, o status do laboratório 
-						(a disponibilidade, se atualmente está ocorrendo aula ou monitoria), report de máquinas danificadas e requisição de instalação de software para utilização.</p>
+						(a disponibilidade, se atualmente está ocorrendo aula ou monitoria), report de máquinas danificadas e requisição de instalação de software para utilização.</justify></p>
 </div>
 
 
 
 <h1>Desenvolvedores</h1>
-<br><br />
+<br />
 <div class="col-sm-3 col-md-3 perfil">
 	<div class="thumbnail">
 		<img src="/assets/images/andre.jpg" class="img-circle">
 		<div class="caption">
 		<h3>André Vieira</h3>
-		<p>Estudante de Ciência da Computação, curioso na área de robótica com ênfase em próteses médicas.<br />Apaixonado por jogos e nas horas vagas praticante de Slackline</p>
-		<p><a href="https://github.com/byandreee" class="btn btn-social-icon btn-github">
+		<p align:"justify">Estudante de Ciência da Computação, curioso na área de robótica com ênfase em próteses médicas.<br />Apaixonado por jogos e nas horas vagas praticante de Slackline</p>
+		<p align:"center"><a href="https://github.com/byandreee" class="btn btn-social-icon btn-github">
 		<i class="fa fa-github"></i>
 		</a>
 		<a href="https://www.linkedin.com/in/andredvieira" class="btn btn-linkedin">
 		<i class="fa fa-linkedin"></i>
-		</a>
+		</a></p>
 		</div>
 	</div>
 </div>
@@ -32,12 +32,12 @@
     <img src="/assets/images/gustavo.jpg" class="img-circle">
     <div class="caption">
       <h3>Gustavo Rodrigues</h3>
-      <p>Estudante de exatas com um pé em humanas, apaixonado por diversas áreas do conhecimento.<br />Praticante de Handebol, Natação, Desenho e Maxed nas suas horas vagas. </p>
-      <p><a href="https://github.com/darkkgreen" class="btn btn-social-icon btn-github">
+      <p align:"justify">Estudante de exatas com um pé em humanas, apaixonado por diversas áreas do conhecimento.<br />Praticante de Handebol, Natação, Desenho e Maxed nas suas horas vagas. </p>
+      <p align:"center"><a href="https://github.com/darkkgreen" class="btn btn-social-icon btn-github">
         <i class="fa fa-github"></i>
       </a>
       <a href="https://www.linkedin.com/in/darkkgreen" class="btn btn-linkedin">
-        <i class="fa fa-linkedin"></i>
+        <i class="fa fa-linkedin"></i></p>
       </a>
     </div>
   </div>
@@ -48,13 +48,13 @@
     <img src="/assets/images/eihara.jpg" class="img-circle">
     <div class="caption">
       <h3>Henrique Eihara</h3>
-      <p></p>
-      <p><a href="https://github.com/eiguike" class="btn btn-social-icon btn-github">
+      <p align:"justify"></p>
+      <p align:"center"><a href="https://github.com/eiguike" class="btn btn-social-icon btn-github">
         <i class="fa fa-github"></i>
       </a>
       <a href="https://www.linkedin.com/in/rickeihara" class="btn btn-linkedin">
         <i class="fa fa-linkedin"></i>
-      </a>
+      </a></p>
     </div>
   </div>
  </div>
@@ -63,13 +63,13 @@
       <img src="/assets/images/lordello.jpg" class="img-circle">
       <div class="caption">
         <h3>Renan Lordello</h3>
-        <p>Estudante de Ciência da Computação, louco por matemática e desenvolvimento de software, e praticante de e-sports.</p>
-        <p><a href="https://github.com/automagicly" class="btn btn-social-icon btn-github">
+        <p align:"justify">Estudante de Ciência da Computação, louco por matemática e desenvolvimento de software, e praticante de e-sports.</p>
+        <p align:"center"><a href="https://github.com/automagicly" class="btn btn-social-icon btn-github">
           <i class="fa fa-github"></i>
         </a>
         <a href="https://www.linkedin.com/in/renan-lordello-de-aguiar-a1628b4b" class="btn btn-linkedin">
           <i class="fa fa-linkedin"></i>
-        </a>
+        </a></p>
       </div>
     </div>
   </div>
@@ -162,8 +162,5 @@ body {
   font-size: 23px;
 
 }
-p{
- text-align: justify;
 
-}
 </style>
