add changelogs to about

--- a/app/views/application/about.html.erb
+++ b/app/views/application/about.html.erb
@@ -2,6 +2,7 @@
 
 <div class="page-header">
         <h1>O Projeto</h1>
+		
         <p class="lead",><justify>Realizado na Universidade Federal de São Carlos - Sorocaba, nas matérias de Projeto de Desenvolvimento de Software (PDS) e Interface Humano Computador (IHC).<br />
 						O sistema consiste no gerenciamento dos laboratórios de informática, verificando a disponibilidade do mesmo e das máquinas a partir de um mapa do laboratório, o status do laboratório 
 						(a disponibilidade, se atualmente está ocorrendo aula ou monitoria), report de máquinas danificadas e requisição de instalação de software para utilização.</justify></p>
@@ -73,6 +74,18 @@
       </div>
     </div>
   </div>
+  
+  <div>
+	<h1>Changelogs</h1>
+	
+	<p align:"justify">
+	18/11/2016 - Adição da pagina Sobre
+	19/11/2016 - Indentificado problemas na pagina About
+	//completar logs
+	
+	</p>
+  </div>
+  
 </div>
 
 <style>
