fix cnagelogs about

--- a/app/views/application/about.html.erb
+++ b/app/views/application/about.html.erb
@@ -79,9 +79,9 @@
 	<h1>Changelogs</h1>
 	
 	<p align:"justify">
-	18/11/2016 - Adição da pagina Sobre
-	19/11/2016 - Indentificado problemas na pagina About
-	//completar logs
+	18/11/2016 - Adição da pagina Sobre<br />
+	19/11/2016 - Indentificado problemas na pagina About<br />
+	//completar logs<br />
 	
 	</p>
   </div>
