--- a/app/views/application/about.html.erb
+++ b/app/views/application/about.html.erb
@@ -78,16 +78,12 @@
  
   
 </div>
- <div class="col-sm-6 col-md-6">
+ <div>
 	<h1>Changelogs</h1>
-	
-	<p align:"justify">
-	18/11/2016 - Adição da pagina Sobre<br />
-	19/11/2016 - Indentificado problemas na pagina About<br />
-	//completar logs<br />
-	
-	</p>
-  </div>
+	<p align:"justify">18/11/2016 - Adição da pagina Sobre<br /></p>
+	<p align:"justify">19/11/2016 - Indentificado problemas na pagina About<br /></p>
+	<p align:"justify">20/11/2016 - Históricos para o administrador<br /></p>
+	</div>
 <style>
 body {
   padding-top: 75px;
