--- a/app/views/application/about.html.erb
+++ b/app/views/application/about.html.erb
@@ -74,16 +74,16 @@
       </div>
     </div>
   </div>
-  
- 
-  
-</div>
- <div>
+   <div class="col-sm-3 col-md-12">
 	<h1>Changelogs</h1>
 	<p align:"justify">18/11/2016 - Adição da pagina Sobre<br /></p>
 	<p align:"justify">19/11/2016 - Indentificado problemas na pagina About<br /></p>
 	<p align:"justify">20/11/2016 - Históricos para o administrador<br /></p>
 	</div>
+ 
+  
+</div>
+
 <style>
 body {
   padding-top: 75px;
