--- a/app/views/dashboard/show.html.erb
+++ b/app/views/dashboard/show.html.erb
@@ -476,8 +476,6 @@ $(document).ready(function(){
       $("#reportMax").append("<tr><td><p><i class ='"+colorClass[i]+"'></i>"+pc_reports_json[i][0]+"</p></td><td>"+pc_reports_json[i][1]+"</td></tr>");
       labelClass.push(pc_reports_json[i][0]);
       dataClass.push(pc_reports_json[i][1]);
-      alert(labelClass);
-      alert(dataClass);
     }
   }
 
@@ -485,9 +483,8 @@ $(document).ready(function(){
     type: 'doughnut',
     tooltipFillColor: "rgba(51, 51, 51, 0.55)",
     data: {
-      labels: [
-        labelClass
-      ],
+      labels: 
+        labelClass,
       datasets: [{
         data: dataClass,
         backgroundColor: [
