--- a/app/views/application/about.html.erb
+++ b/app/views/application/about.html.erb
@@ -74,7 +74,7 @@
       </div>
     </div>
   </div>
-   <div class="col-sm-3 col-md-12">
+   <div class="col-sm-3 col-md-12" align:"center">
 	<h1>Changelogs</h1>
 	<p align:"justify">18/11/2016 - Adição da pagina Sobre<br /></p>
 	<p align:"justify">19/11/2016 - Indentificado problemas na pagina About<br /></p>
