--- a/app/views/application/about.html.erb
+++ b/app/views/application/about.html.erb
@@ -49,7 +49,7 @@
     <img src="/assets/images/eihara.jpg" class="img-circle">
     <div class="caption">
       <h3>Henrique Eihara</h3>
-      <p align:"justify"></p>
+      <p align:"justify">Tomador de café profissional, realiza Lan Partys esporádicas para descontrair com os amigos e manda uns sampleys de guitarra em seu tempo livre. Sua paixão mesmo é a Tecnologia e Programação aliado com a inovação.</p>
       <p align:"center"><a href="https://github.com/eiguike" class="btn btn-social-icon btn-github">
         <i class="fa fa-github"></i>
       </a>
