adicionado os pedidos de dados pro rique

--- a/app/views/dashboard/show.html.erb
+++ b/app/views/dashboard/show.html.erb
@@ -1,6 +1,7 @@
 <!-- page content -->
 <div class="right_col" role="main">
   <!-- top tiles -->
+
   <div class="row tile_count">
     <div class="col-md-2 col-sm-4 col-xs-6 tile_stats_count">
       <span class="count_top"><i class="fa fa-user"></i> Tempo Aberto Hoje</span>
@@ -18,7 +19,7 @@
       <span class="count_bottom"><i class="green"><i class="fa fa-sort-asc"></i>3% </i> From last Week</span>
     </div>
     <div class="col-md-2 col-sm-4 col-xs-6 tile_stats_count">
-      <span class="count_top"><i class="fa fa-user"></i> Pico de Usuários Hoje</span>
+      <span class="count_top"><i class="fa fa-user"></i> Usuários Cadastrados</span>
       <!-- aqui a gente infere o pico de usuários no dia atual -->
       <div class="count green">2,500</div>
       <!-- aqui a gente infere o pico de usuários na semana inteira passada -->
@@ -38,7 +39,7 @@
       <span class="count_bottom"><i class="green"><i class="fa fa-sort-asc"></i>34% </i> From last Week</span>
     </div>
     <div class="col-md-2 col-sm-4 col-xs-6 tile_stats_count">
-      <span class="count_top"><i class="fa fa-user"></i> Equip. ligado por hora fechado</span>
+      <span class="count_top"><i class="fa fa-user"></i> DComp: Servidor Offline</span>
       <!-- Pegar nessa semana os horários em que tinham pcs ligados e que o lab estava fechado -->
       <div class="count">7,325</div>
       <!-- Pegar o mesmo dado só que da semana passada -->
@@ -547,3 +548,17 @@ $(document).ready(function() {
   });
 });
 </script>
+
+<!-- 
+// Tempo aberto no dia atual
+// Tempo aberto no mesmo dia, só que 1 semana atrás
+// Tempo médio que ficou aberto essa semana
+// Tempo médio que ficou aberto semana passada
+// Número de usuários cadastrados no sistema
+// Número de Reports não resolvidos
+// Número total de reports
+// Tempo sem energia essa semana
+// Tempo sem energia semana passada
+// 5 salas com mais aulas
+// Últimos 4 reports de máquinas (e o horário que foram feitos)
+// Últimos 4 acessos ao LERIS -->
