--- a/app/views/dashboard/show.html.erb
+++ b/app/views/dashboard/show.html.erb
@@ -549,8 +549,14 @@ $(document).ready(function() {
 });
 </script>
 
-<!-- 
+<script>
 // Tempo aberto no dia atual
+<% time_open_today = @labopen_today.to_json %>
+time_open_today_chart = <%= raw time_open_today%>; // json criado
+
+<% time_open_today_week = @labopen_today_and_week_ago.to_json %>
+time_open_today_week_chart = <%= raw time_open_today_week%>; // json criado
+
 // Tempo aberto no mesmo dia, só que 1 semana atrás
 // Tempo médio que ficou aberto essa semana
 // Tempo médio que ficou aberto semana passada
@@ -561,4 +567,5 @@ $(document).ready(function() {
 // Tempo sem energia semana passada
 // 5 salas com mais aulas
 // Últimos 4 reports de máquinas (e o horário que foram feitos)
-// Últimos 4 acessos ao LERIS -->
+// Últimos 4 acessos ao LERIS
+</script>
